--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
                   <th scope="col">&nbsp;3rd Place</th>
                 </tr>
 				<tr>
-				<th scope="row">&nbsp;2024</th>
+				<th scope="row">&nbsp;2025</th>
+				  <td>&nbsp;Karim (Philadelphia Eagles)</td>
+				  <td>&nbsp;Blake (San Francisco 49ers)</td>
+				  <td>&nbsp;Nick-Jets (New York Jets)</td>
+				</tr>				
+            <th scope="row">&nbsp;2024</th>
 				  <td>&nbsp;Nick-Jets (New York Jets)</td>
 				  <td>&nbsp;Karim (Philadelphia Eagles)</td>
 				  <td>&nbsp;Keith (Carolina Panthers)</td>
